# calc-chatbot-kakao

./: .env.example  .gitignore  README.md
bot-script/: package-lock.json  package.json  tsconfig.json
bot-script/src/: bridge.ts  messengerbot.d.ts
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  fly.toml
server/src/: main.rs
